[Fixed] Wrapper overflow

--- a/src/assets/styles/layout/_wrapper.scss
+++ b/src/assets/styles/layout/_wrapper.scss
@@ -10,51 +10,46 @@ $_wrapper-max-width: 1120 + 30;
 $_wrapper-padding: 30;
 
 .wrapper {
-    margin: 0 auto;
-    clear: both;
-    position: relative;
+  margin: 0 auto;
+  clear: both;
+  position: relative;
+  padding-left: rem-calc($_wrapper-padding / 2);
+  padding-right: rem-calc($_wrapper-padding / 2);
+  max-width: rem-calc($_wrapper-max-width);
 
-    padding-left: rem-calc($_wrapper-padding / 2);
-    padding-right: rem-calc($_wrapper-padding / 2);
-
-    width: 100%;
-    max-width: rem-calc($_wrapper-max-width);
-
-    @include respond-to(medium) {
-        padding-left: rem-calc($_wrapper-padding);
-        padding-right: rem-calc($_wrapper-padding);
-    }
+  @include respond-to(medium) {
+    padding-left: rem-calc($_wrapper-padding);
+    padding-right: rem-calc($_wrapper-padding);
+  }
 }
 
 .wrapper--bleed {
-    margin: 0 auto;
-    padding: 0;
-    max-width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 100%;
 
-    @include respond-to(medium) {
-        max-width: rem-calc($_wrapper-max-width);
-        padding-left: rem-calc($_wrapper-padding);
-        padding-right: rem-calc($_wrapper-padding);
-    }
+  @include respond-to(medium) {
+    max-width: rem-calc($_wrapper-max-width);
+    padding-left: rem-calc($_wrapper-padding);
+    padding-right: rem-calc($_wrapper-padding);
+  }
 }
 
 .wrapper\@large {
-
-    @include respond-to(large) {
-        margin: 0 auto;
-        clear: both;
-        position: relative;
-        max-width: rem-calc($_wrapper-max-width);
-        padding-left: rem-calc($_wrapper-padding);
-        padding-right: rem-calc($_wrapper-padding);
-    }
+  @include respond-to(large) {
+    margin: 0 auto;
+    clear: both;
+    position: relative;
+    max-width: rem-calc($_wrapper-max-width);
+    padding-left: rem-calc($_wrapper-padding);
+    padding-right: rem-calc($_wrapper-padding);
+  }
 }
 
-
 .no-wrapper\@large {
-    @include respond-to(large) {
-        margin: 0 auto;
-        padding: 0;
-        max-width: 100%;
-    }
+  @include respond-to(large) {
+    margin: 0 auto;
+    padding: 0;
+    max-width: 100%;
+  }
 }
